# TQ1-IR

./: .gitignore  LICENSE  README.md  TQ1-IR_paper.docx  __init__.py  ir.py  ops.py  pyproject.toml  types.py
backend/: __init__.py  isa_backend.py  kernel_backend.py
frontend/: __init__.py  gguf_frontend.py
passes/: __init__.py  fusion.py  quant_lower.py  verify.py
tests/: desktop.ini  test_compile_pipeline.py  test_dialect_hello.py  test_residual_v1.py
